--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,47 @@ h3 {
     height: 100%;
     object-fit: cover;
 }
+
+.recent-posts {
+    background-color: #EDF7FA;
+    padding: 27px 0px 32px;
+}
+
+.recent-posts__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 22px;
+}
+
+.recent-posts__articles {
+    display: flex;
+}
+
+.recent-posts__article {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 10px rgba(187, 225, 250, 0.25);
+    border-radius: 4px;
+    margin-right: 2%;
+    padding: 24px 27px 31px 23px;
+    color: #21243D;
+}
+
+.recent-posts__article:last-child {
+    margin-right: 0;
+}
+
+.recent-posts__subtitle {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.46;
+    margin-bottom: 17px;
+}
+
+.recent-posts__info {
+    margin-bottom: 15px;
+}
+
+.recent-post__separator {
+    margin: 0px 26px;
+}
