--- a/css/style.css
+++ b/css/style.css
@@ -224,3 +224,62 @@ h3 {
         margin-bottom: 17px;
     }
 }
+
+.work {
+    display: flex;
+    padding: 33px 0px;
+    border-bottom: 1px solid #E0E0E0;
+}
+
+.work__img-wrap {
+    max-width: 246px;
+    max-height: 180px;
+    overflow: hidden;
+    flex-shrink: 0;
+    border-radius: 6px;
+}
+
+.work__img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.work__date-block {
+    display: flex;
+}
+
+.work__date {
+    background: #142850;
+    border-radius: 16px;
+    color: #FFFFFF;
+    min-height: 25px;
+    min-width: 62px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+@media (max-width: 480px) {
+    .featured__works {
+        display: flex;
+        width: 95%;
+        overflow: auto;
+    }
+
+    .work {
+        flex-direction: column;
+        flex: 0 0 100%;
+        margin-right: 2.5%;
+    }
+
+    .work__img-wrap {
+        max-width: 100%;
+        max-height: 230px;
+        overflow: hidden;
+        flex-shrink: 0;
+        border-radius: 6px;
+    }
+}
